test/core/errors/subtypes_error/zs/transitive_cyclic_dependency_error.zs
package transitive_cyclic_dependency_error;

subtype X Y;
subtype Y Z;
subtype Z X; // cycle!
